完成背景及主页面布局

--- a/src/shared/style.scss
+++ b/src/shared/style.scss
@@ -36,5 +36,11 @@ body {
 
 #root {
   margin: 0 auto;
-  background: lightgreen;
+  position: relative;
+  background-image: url("../images/background.png");
+  background-size: cover;
+}
+
+.App {
+  height: 100%;
 }
