--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -1,1 +1,43 @@
 @import "../shared/helper";
+
+.home {
+    width: px(720);
+    height: px(406);
+    background: rgba(0, 0, 0, 0.7);
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    header {
+        height: px(30);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    main {
+        height: px(376);
+        display: grid;
+        grid-template:
+            ". box1 . box2 . box3" 1fr / 14fr 168fr 28fr 302fr 28fr 168fr 14fr;
+        border: 1px solid red;
+
+        .section1 {
+            grid-area: box1;
+            border: 1px solid red;
+        }
+
+        .section2 {
+            grid-area: box2;
+            border: 1px solid red;
+        }
+
+        .section3 {
+            grid-area: box3;
+            border: 1px solid red;
+        }
+    }
+}
