--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -5,17 +5,49 @@
     height: px(406);
     background: rgba(0, 0, 0, 0.7);
     color: #fff;
-    text-align: center;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    box-shadow: 0 0 10px 1px #103852;
 
     header {
         height: px(30);
         display: flex;
         justify-content: center;
         align-items: center;
+        color: #eee;
+        font-size: px(15);
+        background: linear-gradient(90deg, rgba(8, 24, 35, 1) 0%, rgba(0, 0, 0, 0) 50%, rgba(8, 24, 35, 1) 100%);
+        position: relative;
+        text-shadow: 0 0 10px #1d393d, 0 0 20px #1d393d, 0 0 30px #1d393d, 0 0 40px #1d393d;
+
+        &::before {
+            content: '';
+            position: absolute;
+            height: 1px;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: linear-gradient(90deg, rgba(16, 48, 65, 1) 0%, rgba(0, 0, 0, 0) 50%, rgba(16, 48, 65, 1) 100%);
+        }
+
+        .clock {
+            position: absolute;
+            left: px(14);
+            color: #376c78;
+
+            >div {
+                &:first-child {
+                    font-size: px(9);
+                    margin-bottom: px(1);
+                }
+
+                &:nth-child(2) {
+                    font-size: px(5)
+                }
+            }
+        }
     }
 
     main {
