更改背景图样式

--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -72,21 +72,43 @@
         display: grid;
         grid-template:
             ". box1 . box2 . box3" 1fr / 14fr 168fr 28fr 302fr 28fr 168fr 14fr;
-        border: 1px solid red;
+
+        >section {
+            border: 1px solid #0764bc;
+            border-radius: 4px;
+            position: relative;
+            box-shadow: 0 0 2px 0 #0e325f, inset 0 0 2px 0 #0e325f;
+            background: #0c1139;
+
+            &::before {
+                content: '';
+                position: absolute;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                top: 0;
+                border-radius: 4px;
+                box-shadow: 17px 0 0 -16px #0e325f,
+                    -17px 0 0 -16px #0e325f,
+                    0 17px 0 -16px #0e325f,
+                    0 -17px 0 -16px #0e325f,
+                    9px 0 0 -8px #0d4483,
+                    -9px 0 0 -8px #0d4483,
+                    0 9px 0 -8px #0d4483,
+                    0 -9px 0 -8px #0d4483, ;
+            }
+        }
 
         .section1 {
             grid-area: box1;
-            border: 1px solid red;
         }
 
         .section2 {
             grid-area: box2;
-            border: 1px solid red;
         }
 
         .section3 {
             grid-area: box3;
-            border: 1px solid red;
         }
     }
 }
