--- a/src/shared/style.scss
+++ b/src/shared/style.scss
@@ -40,10 +40,14 @@ body {
   position: relative;
   background-image: url("../images/background.png");
   background-size: cover;
+  display: flex;
+  flex-direction: column;
 }
 
 .App {
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .icon {
@@ -52,4 +56,13 @@ body {
   vertical-align: -0.15em;
   fill: currentColor;
   overflow: hidden;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-size: 14px;
 }
