--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -69,7 +69,8 @@
 
     main {
         flex: 1;
-        height: px(376);
+        height: px(361);
+        margin-top: px(15);
         display: grid;
         grid-template:
             ". box1 . box2 . box3" 1fr / 14fr 168fr 28fr 302fr 28fr 168fr 14fr;
@@ -132,6 +133,16 @@
 
         .section1 {
             grid-area: box1;
+
+            .chart1 {
+                height: px(118);
+                display: flex;
+                flex-direction: column;
+
+                >.chart {
+                    flex: 1;
+                }
+            }
         }
 
         .section2 {
@@ -149,28 +160,6 @@
         .section5 {
             grid-area: box5;
         }
-
-        .管辖统计 {
-            height: px(315);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            h2 {
-                flex-shrink: 0;
-                border: 1px solid #0a5299;
-                border-bottom-left-radius: 4px;
-                border-bottom-right-radius: 4px;
-                font-size: px(22);
-                line-height: px(24);
-                padding: px(10) px(28);
-                text-shadow: 0 0 px(3) white;
-            }
-
-            .chart {
-                flex: 1;
-                width: 100%;
-            }
-        }
+        
     }
 }
