添加折线图

--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -138,6 +138,7 @@
                 height: px(118);
                 display: flex;
                 flex-direction: column;
+                margin-bottom: px(20);
 
                 >.chart {
                     flex: 1;
