--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -202,6 +202,15 @@
 
         .section3 {
             grid-area: box3;
+            .chartWrapper {
+                height: px(98);
+                display: flex;
+                flex-direction: column;
+                margin-bottom: px(20);
+                > .chart {
+                  flex: 1;
+                }
+              }
         }
 
 
