--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -202,7 +202,7 @@
 
         .section3 {
             grid-area: box3;
-            .chartWrapper {
+            >.chartWrapper {
                 height: px(98);
                 display: flex;
                 flex-direction: column;
